# mcp-browser

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_STRUCTURE.md  DEVELOPER.md  MANIFEST.in  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py  test_browser_control.py  test_qa_fixes.py
.claude-mpm/: PM_INSTRUCTIONS.md
.claude-mpm/correlations/: correlation_82512290-1bd7-494c-9777-d1ecffb262ac.json  correlation_941e48ea-6e1b-42c6-9521-458d6cb7cbda.json
.claude-mpm/memories/: architectural-decisions.md
.claude/agents/: .dependency_cache  .mpm_deployment_state
.makefiles/: common.mk  deps.mk  quality.mk  release.mk  testing.mk
.mcp-browser/: .gitignore
.mcp-vector-search/: index_metadata.json
.mcp-vector-search/c0a46943-97b3-4a36-9519-cd6233b58cfc/: index_metadata.pickle
docs/: CDP_CONNECTION.md  DEVELOPER.md  SAFARI_EXTENSION.md
docs/developer/: SAFARI_IMPLEMENTATION.md
docs/guides/: INSTALLATION.md  UNINSTALL.md
docs/prd/: mcp-browser.md
extension/: background.js  content.js  manifest.json  popup.html  popup.js
kuzu-memories/: memories.db
logs/prompts/: agent_engineer_20250914_190400_003.md  agent_engineer_20250914_192129_967.md  system_prompt_20250914_185235_795.md
mcp-browser-extension/: background-enhanced.js  content.js  manifest.json  package-lock.json  popup-enhanced.html  popup-enhanced.js
mcp-browser-extension-firefox/: INSTALLATION.md  README.md  manifest.json
mcp-browser-extension-safari-resources/: background.js  manifest.json
scripts/: create-safari-extension.sh  generate_build_info.py  release.py
src/: __init__.py  _version.py
src/cli/: __init__.py  main.py
src/container/: __init__.py  service_container.py
src/extension/: manifest.json
src/models/: __init__.py  browser_state.py  console_message.py
src/services/: __init__.py  async_request_response_service.py  browser_controller.py  browser_service.py  dashboard_service.py  mcp_installer_bridge.py  mcp_service.py  screenshot_service.py  storage_service.py  websocket_service.py
tests/: __init__.py
tests/integration/: __init__.py  test_auto_start.py  test_browser_control.py  test_doctor_command.py  test_implementation.py  test_mcp_browser.py  test_mcp_tools.py  test_port_mismatch_fix.py  test_qa_fixes.py  test_semantic_dom.py  test_semantic_dom_ws.py  test_service_integration.py  (+2 more)
(+49 files in other folders)
