[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browserpymcp"
version = "1.0.0"
description = "MCP server for browser console log capture and control"
readme = "README.md"
authors = [
    { name = "BrowserPyMCP Team", email = "support@browserpymcp.dev" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "mcp>=0.1.0",
    "websockets>=11.0",
    "playwright>=1.40.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
browserpymcp = "src.cli.main:main"

[project.urls]
Homepage = "https://github.com/browserpymcp/mcp-browser"
Documentation = "https://docs.browserpymcp.dev"
Repository = "https://github.com/browserpymcp/mcp-browser"
Issues = "https://github.com/browserpymcp/mcp-browser/issues"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src", "src.cli", "src.container", "src.models", "src.services"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.html", "*.js", "*.png"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"